Ready for web deployment

--- a/app.json
+++ b/app.json
@@ -5,6 +5,11 @@
       "expo-router"
     ],
     "name": "AIReceptionist",
-    "slug": "AIReceptionist"
+    "slug": "AIReceptionist",
+    "web": {
+      "bundler": "metro",
+      "output": "static",
+      "favicon": "./assets/icons/favicon.png"
+    }
   }
 }
